# AColoRS

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: arch-build.yaml  build.yaml  linux-build.yaml  windows-build.yaml
components/acolors_signal/: Cargo.toml
components/acolors_signal/src/: lib.rs  signal.rs
components/core_data/: Cargo.toml
components/core_data/src/: lib.rs
components/core_data/src/data_type/: convert.rs  group.rs  node.rs
components/core_protobuf/: Cargo.toml  build.rs
components/core_protobuf/src/: acolors.rs  lib.rs  v2ray.rs  v2rayapi.rs
components/errors/src/: lib.rs
components/serialize_tool/: Cargo.toml
components/serialize_tool/src/serialize/: serializer.rs  serializetool.rs
components/serialize_tool/src/serialize/protocol/: mod.rs  naiveproxy.rs  shadowsocks.rs  trojan.rs  vmess.rs
components/utils/: Cargo.toml
components/utils/src/: net.rs  time.rs
crates/cli/: Cargo.toml  cli.rs  main.rs  serve.rs
crates/config_manager/: Cargo.toml
crates/config_manager/src/: convert.rs  cores.rs  inbound.rs  lib.rs
crates/core/: app.rs  args.rs  main.rs  serve.rs
crates/kernel_manager/: Cargo.toml
crates/kernel_manager/src/: core.rs  coremanager.rs  lib.rs
crates/kernel_manager/src/naiveproxy/: configtool.rs  coretool.rs
crates/kernel_manager/src/shadowsocks/: configtool.rs  coretool.rs
crates/kernel_manager/src/trojan_go/: configtool.rs  coretool.rs  mod.rs
crates/kernel_manager/src/v2ray/: configtool.rs  coretool.rs  mod.rs  raycore.rs
crates/latency_test/: Cargo.toml
crates/latency_test/src/: lib.rs
crates/plugin/: Cargo.toml
crates/profile_manager/: Cargo.toml  build.rs
crates/profile_manager/src/: dbtools.rs  lib.rs  profile.rs  protobuf.rs  serialize.rs
crates/profile_manager/src/data_type/: group.rs  grouplist.rs  listmodel.rs  mod.rs  node.rs  runtime.rs  runtimevalue.rs  traits.rs  withconnection.rs
crates/profile_manager/src/manager/: consumer.rs  mod.rs  producer.rs  profile_manager.rs  reply.rs  request.rs  signal.rs
crates/profile_manager/src/serialize/: mod.rs  serialize.rs  serializer.rs  serializetool.rs
crates/profile_manager/src/serialize/protocol/: shadowsocks.rs  trojan.rs  vmess.rs
crates/profile_manager/src/table_member/: group.rs  grouplist.rs  mod.rs  node.rs  runtime.rs  traits.rs
crates/profile_manager/src/test/: mod.rs
crates/profile_manager/src/tools/: dbtools.rs  mod.rs  schema.rs
crates/profile_manager/tests/: mod.rs
crates/server/: Cargo.toml  build.rs
crates/server/proto/: acolors.proto
crates/server/src/: config_manager.rs  converts.rs  core_manager.rs  greeter.rs  inbounds.rs  lib.rs  notifications.rs  profile.rs  server_manager.rs  signal_stream.rs  tools.rs  traffic_speed.rs  utils.rs
crates/storage/: Cargo.toml
pkgbuild/arch/acolors-dev-git/: .SRCINFO  .gitignore  PKGBUILD
proto/: acolors.proto  v2ray_config.proto
src/: args.rs  cli.rs  main.rs
tests/: mod.rs  test_v2ray_core.rs
tests/utils/: mod.rs  net.rs
