[package]
name = "acolors"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@pm.me>"]
description = "A tool for managing proxy outbounds."
license = "AGPLv3"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "acolors"
path = "crates/core/main.rs"

[workspace]
members = [
    "crates/kernel_manager",
    "crates/latency_test",
    "crates/profile_manager",
    "crates/server",
    "crates/plugin",
    "crates/cli",
    "components/utils",
]

[dependencies]
clap = { version = "3.0.13", features = ["cargo"] }
spdlog-rs = { version = "0.1.1", features = [
    "level-debug",
    "release-level-info",
] }
anyhow = "1.0.53"

utils = { path = "components/utils" }
server = { path = "crates/server" }
