[package]
name = "acolors"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@pm.me>"]
description = "Proxy Profile Manager Server with gRPC API"
license = "AGPLv3"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "acolors"
path = "crates/cli/main.rs"

[workspace]
members = [
    "crates/kernel_manager",
    "crates/profile_manager",
    "crates/server",
    "crates/config_manager",
    "components/core_protobuf",
    "components/core_data",
    "components/serialize_tool",
    "components/utils",
    "components/acolors_signal",
]

[dependencies]
clap = { version = "3.1.12", features = ["derive","cargo"] }
spdlog-rs = { version = "0.2.4", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
anyhow = "1.0.56"
openssl = { version = '*', optional = true }

server = { path = "crates/server" }
utils = { path = "components/utils" }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync"] }
core_protobuf = {path = "components/core_protobuf"}
core_data = {path = "components/core_data"}
serialize_tool = {path = "components/serialize_tool"}

profile_manager = {path = "crates/profile_manager"} 
config_manager = {path = "crates/config_manager"} 
kernel_manager = {path = "crates/kernel_manager"} 

[profile.release]
lto = true
codegen-units = 1
strip = true

[features]
vendored-openssl = ["openssl/vendored"]