[package]
name = "acolors_signal"
version = "0.1.0"
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdlog-rs = { version = "0.3", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
tokio = { version = "1.18", features = ["sync"] }


core_protobuf = {path = "../core_protobuf"}