[package]
name = "core_data"
version = "0.1.0"
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

utils = { path = "../../components/utils" }
core_protobuf = {path = "../../components/core_protobuf"}
