[package]
name = "core_protobuf"
version = "0.1.0"
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9.0"
tonic = "0.6.2"
serde = {version = "1.0.136", features=["derive"]}





[build-dependencies]
tonic-build = "0.6.2"