[package]
name = "serialize_tool"
version = "0.1.0"
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="1.0.53"
spdlog-rs = { version = "0.2.3", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
serde_json = "1.0.79"
serde = {version = "1.0.136", features=["derive"]}
regex = "1.5.4"
base64 = "0.13.0"
urlencoding = "2.1.0"


core_data = {path = "../core_data"}
core_protobuf = {path = "../core_protobuf"}