[package]
name = "serialize_tool"
version = "0.1.0"
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="1.0"
spdlog-rs = { version = "0.3", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
serde_json = "1.0"
serde = {version = "1.0", features=["derive"]}
regex = "1.5"
base64 = "0.13"
once_cell = "1.10"
urlencoding = "2.1"


core_data = {path = "../core_data"}
core_protobuf = {path = "../core_protobuf"}