[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdlog-rs = "0.2.2"
reqwest = { version = "0.11.9", features = ["json"]}
anyhow = "1.0.53"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }