[package]
name = "utils"
version = "0.1.0"
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdlog-rs = { version = "0.2.3", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
reqwest = { version = "0.11.9", features = ["json"]}
anyhow = "1.0.53"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync"] }