[package]
name = "config_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = {version = "1.0.136", features=["derive"]}
anyhow = "1.0.53"

core_protobuf = {path = "../../components/core_protobuf"}