[package]
name = "kernel_manager"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
semver = "1.0.5"
serde_json = "1.0.79"
serde = {version = "1.0.136", features=["derive"]}
prost = "0.9.0"
tonic = "0.6.2"


config_manager = { path = "../config_manager/" }
profile_manager = { path = "../profile_manager/" }

[build-dependencies]
tonic-build = "0.6.2"