[package]
name = "kernel_manager"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
semver = "1.0.5"
serde_json = "1.0.79"
serde = {version = "1.0.136", features=["derive"]}
spdlog-rs = { version = "0.2.2", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }


config_manager = { path = "../config_manager/" }
core_protobuf = {path = "../../components/core_protobuf"}
core_data = {path = "../../components/core_data"}
serialize_tool = {path = "../../components/serialize_tool"}

