[package]
name = "kernel_manager"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
license = "AGPLv3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = {version = "1.0", features=["derive"]}
spdlog-rs = { version = "0.3", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
urlencoding = "2.1"


config_manager = { path = "../config_manager/" }
core_protobuf = {path = "../../components/core_protobuf"}
core_data = {path = "../../components/core_data"}
serialize_tool = {path = "../../components/serialize_tool"}

