[package]
name = "profile-manager"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.3"
anyhow = "1.0.53"
spdlog-rs = { version = "0.2.2", features = [
    "level-debug",
    "release-level-info",
] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
serde_json = "1.0.78"
serde = {version = "1.0.136", features=["derive"]}
reqwest = "0.11.9"
prost = "0.9.0"
tonic = "0.6.2"
base64 = "0.13.0"
regex = "1.5.4"

utils = { path = "../../components/utils" }

[build-dependencies]
tonic-build = "0.6.2"