[package]
name = "profile_manager"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = {version = "0.26.3",features =["bundled"]}
anyhow = "1.0.53"
spdlog-rs = { version = "0.2.2", features = [
    "level-debug",
    "release-level-info",
] }
tokio = { version = "1.16.1", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = "0.11.9"

core_protobuf = {path = "../../components/core_protobuf"}
core_data = {path = "../../components/core_data"}

[build-dependencies]
tonic-build = "0.6.2"