[package]
name = "profile_manager"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
license = "AGPLv3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","sqlite","macros","migrate" ] }
anyhow = "1.0.53"
spdlog-rs = { version = "0.2.3", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = "0.11.9"
futures = {version = "0.3.21", default-features = false, features = ["alloc"]}

core_protobuf = {path = "../../components/core_protobuf"}
core_data = {path = "../../components/core_data"}
acolors_signal = {path = "../../components/acolors_signal"}

[build-dependencies]
tonic-build = "0.6.2"