[package]
name = "server"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdlog-rs = { version = "0.2.2", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync","fs"] }
tokio-stream = { version = "0.1.8" , features = ["sync"] }
tonic = "0.6.2"
anyhow = "1.0.53"
rusqlite = "0.26.3"
base64 = "0.13.0"
serde_json = "1.0.79"
futures = {version = "0.3.21", default-features = false, features = ["alloc"]}

profile_manager = { path = "../profile_manager" }
config_manager = { path = "../config_manager" }
kernel_manager = { path = "../kernel_manager" }
core_protobuf = {path = "../../components/core_protobuf"}
core_data = {path = "../../components/core_data"}
serialize_tool = {path = "../../components/serialize_tool"}
utils = { path = "../../components/utils" }
acolors_signal = {path = "../../components/acolors_signal"}

[build-dependencies]
tonic-build = "0.6.2"
