[package]
name = "server"
version = "0.1.0"
authors = ["khonoka <kagiyamahonoka@protonmail.com>"]
license = "AGPLv3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spdlog-rs = { version = "0.2", features = [
    "level-debug",
    "release-level-info",
    "source-location",
] }
tokio = { version = "1.18", features = ["rt-multi-thread", "macros", "sync","fs","signal","process","io-util"] }
tokio-stream = { version = "0.1" , features = ["sync"] }
tonic = "0.7"
anyhow = "1.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls","sqlite","macros","migrate" ] }
base64 = "0.13"
serde_json = "1.0"
futures = {version = "0.3", default-features = false, features = ["alloc"]}

profile_manager = { path = "../profile_manager" }
config_manager = { path = "../config_manager" }
kernel_manager = { path = "../kernel_manager" }
core_protobuf = {path = "../../components/core_protobuf"}
core_data = {path = "../../components/core_data"}
serialize_tool = {path = "../../components/serialize_tool"}
utils = { path = "../../components/utils" }
acolors_signal = {path = "../../components/acolors_signal"}

[build-dependencies]
tonic-build = "0.7"
